<resources>
  <string name="app_name">BDKStock</string>
  <string name="bdk_stock">BDK Stock</string>
  <string name="phone_number">Телефон номер</string>
  <string name="password">Пароль</string>
  <string name="log_in">Войти</string>
  <string name="logo">Logo</string>


  <string name="connection_error">Нет подключения к Интернету</string>
  <string name="internal_exception">Внутренняя ошибка</string>
  <string name="auth_error">auth error</string>
  <string name="invalid_phone_number_or_password">Неверный номер телефона или пароль</string>
  <string name="error_empty_phone_number">вам нужно указать номер телефона</string>
  <string name="error_empty_password">вам нужно указать пароль</string>
  <string name="error_empty_name">вам нужно указать имя</string>
  <string name="error_empty_surname">вам нужно указать фамилю</string>
  <string name="error_empty_address">вам нужно указать адрес</string>
  <string name="error_empty_vehicle">Вам необходимо выбрать авто</string>
  <string name="error_empty_reg_number">вам нужно указать номео авто</string>
  <string name="error_empty_unit">вам нужно указать ед. изм ингредиента</string>
  <string name="error_empty_comment">вам нужно написать комментарий</string>
  <string name="error_empty_product">Вам необходимо выберать подукт</string>


  <string name="unknown_error">Ой что-то пошло не так!!!</string>
  <string name="delete">Удалить</string>
  <string name="save">Сохранить</string>
  <string name="edit">Редактировать</string>
  <string name="cancel">Отменить</string>
  <string name="try_again">Повторить</string>
  <string name="profile">Профил</string>
  <string name="name">Имя</string>
  <string name="surname">Фамиля</string>
  <string name="address">Адрес</string>
  <string name="confirm_password">Подтвердить пароль</string>
  <string name="call">Звонить</string>
  <string name="message">Сообщение</string>
  <string name="user">Пользователь</string>
  <string name="job">Работа</string>
  <string name="employees">Сотркдники</string>
  <string name="add">Добавить</string>
  <string name="employee">Сотркдник</string>
  <string name="add_employee">Добавить сотркдник</string>
  <string name="search">Поиск</string>
  <string name="permissions_denied_forever">Разрешение отклонено навсегда</string>
  <string name="open">Открыть</string>
  <string name="permission_denied">Доступе отказано</string>
  <string name="edit_user_details">Изменить данные сотрудника</string>
  <string name="no">Нет</string>
  <string name="yes">Да</string>
  <string name="drivers">Водители</string>
  <string name="add_driver">Добавить водитель</string>
  <string name="register_driver">Зарегистрировать водителя</string>
  <string name="vehicle">Автомобиль</string>
  <string name="registration_number_of_vehicle">Регистрационный номер автомобиля</string>
  <string name="editing">Редактирование</string>
  <string name="edit_driver_message">Вы хотите редактировать поля водителя?</string>
  <string name="driver">Водиель</string>
  <string name="clients">Клиенты</string>
  <string name="retry">Повторить</string>
  <string name="user_logged_out">Пользователь вышел из системы</string>
  <string name="try_again_to_sign_in">Попробуйте еще раз войти в приложение</string>
  <string name="sign_in">Войти</string>
  <string name="left_icon_button">button left</string>
  <string name="right_icon_button">button right</string>
  <string name="recent_searches">Recent searches</string>
  <string name="register_client">Зарегистрировать клиента</string>
  <string name="client">Клиент</string>
  <string name="income">Приход</string>
  <string name="expense">Расход</string>
  <string name="ingredients">Ингредиенты</string>
  <string name="accepted">Принял</string>
  <string name="weight">Масса</string>

  <string name="m_01">Янв</string>
  <string name="m_01_full">Яанварь</string>
  <string name="m_02">Фев</string>
  <string name="m_02_full">Февраль</string>
  <string name="m_03">Мар</string>
  <string name="m_03_full">Март</string>
  <string name="m_04">Апр</string>
  <string name="m_04_full">Апрель</string>
  <string name="m_05">Мая</string>
  <string name="m_05_full">Май</string>
  <string name="m_06">Июн</string>
  <string name="m_06_full">Июнь</string>
  <string name="m_07">Июл</string>
  <string name="m_07_full">Июль</string>
  <string name="m_08">Авг</string>
  <string name="m_08_full">Август</string>
  <string name="m_09">Сен</string>
  <string name="m_09_full">Сентябрь</string>
  <string name="m_10">Окт</string>
  <string name="m_10_full">Октябрь</string>
  <string name="m_11">Ной</string>
  <string name="m_11_full">Ноябрь</string>
  <string name="m_12">Дек</string>
  <string name="m_12_full">Декабрь</string>
  <string name="back">вернуть</string>
  <string name="unit">Ед. изм</string>
  <string name="error_empty_amount">нужно написать вес продукта</string>
  <string name="comments">Комментарии</string>

  <string name="inport">Импорт</string>
  <string name="ingredient">Игредиенть</string>
  <string name="all">Все</string>
  <string name="from_date">с даты</string>
  <string name="to_date">по дату</string>
  <string name="clear">Очистить</string>
  <string name="apply">Филтровать</string>
  <string name="filter">Фильтровать</string>
  <string name="register_employee">Зарегистрировать сотрудника</string>
  <string name="add_ingredients">Добавить ингредиенты</string>
  <string name="operation_on_ingredients">Операции с ингредиентами</string>
  <string name="operation">Операция</string>
  <string name="sales">Продажи</string>
  <string name="products">Товары</string>
  <string name="close">Закрыть</string>

  <string name="message_fragment">Сообщение</string>
  <string name="text_product_add_info">Product uchun ishlatiladigan materiallarni tanlang qoshiladigan material shu productning 1kg uchun hisoblanadi</string>
  <string name="price">Цена</string>
  <string name="error_empty_price">empty unit error</string>
  <string name="error_empty_ingredient">empty ingredient error</string>
  <string name="add_ingredient">Добавить ингредиент</string>
  <string name="add_product">Добавить товар</string>
  <string name="indicator">indicator</string>
  <string name="truck">truck</string>
  <string name="new_driver">Новый водитель</string>
  <string name="new_client">Новый клиент</string>
  <string name="pay">Оплатить</string>
  <string name="new_order">Новый заказ</string>
  <string name="add_client">Добавить клиент</string>
  <string name="choose">Выбрать</string>
  <string name="exit">Выход</string>
  <string name="total_sum">Итого: </string>
  <string name="error_empty_client">Клиент должен быть указан</string>
  <string name="error_empty_driver">Водитель должен быть указан</string>
  <string name="card">Терминал</string>
  <string name="cash">Наличка</string>
  <string name="error_empty_pay_field">Вам необходимо заполнить поля оплаты</string>
  <string name="sale_status_0">Ожидает оплаты</string>
  <string name="sale_status_1">Продано</string>
  <string name="order">Заказ</string>
  <string name="payments">Платежи</string>
  <string name="debit">Остаток суммы</string>
  <string name="paid">Оплачен</string>
  <string name="product">Товар</string>
  <string name="cost_of_product">Сумма товара за 1 кг</string>
  <string name="query_by_client">поиск по клиенту</string>
  <string name="search_by_driver">поиск по водителю</string>
  <string name="date">Дата</string>
  <string name="total_weight">Общая масса</string>
  <string name="edit_product">Редактировать товар</string>
  <string name="edit_ingredient_of_product">Редактировать ингредиены</string>
  <string name="mobile">Mobile</string>
  <string name="no_connection">нет соединения</string>


  <string name="view_employee_contacts">Посмотреть контакты сотрудников</string>
  <string name="permission_to_add_employees">Разрешение на добавление контактов</string>
  <string name="permission_view_orders">Посмотреть все заказы</string>
  <string name="permission_ot_create_new_order">Разрешение на создать новый заказ</string>
  <string name="permission_to_pay_for_orders">Разрешение на оплату заказов</string>
  <string name="permission_to_cancel_orders">Разрешение на отменить заказов</string>
  <string name="permission_to_view_ingredients">Разрешения на просмотр ингредиентов</string>
  <string name="permission_to_create_new_ingredient">Разрешение на создание нового ингредиента</string>
  <string name="permission_import_ingredient">Разрешение на приход ингредиент</string>
  <string name="permission_export_ingredient">Разрешение на экспорт ингредиента</string>
  <string name="permission_view_products">Разрешение на просмотр всех товаров</string>
  <string name="permission_new_product">Разрешение на создание нового продукта</string>
  <string name="permission_import_products">Разрешение на импортаци продуктов</string>
  <string name="permission_export_products">Разрешение на эксротаци продуктов</string>
  <string name="permission_view_dashboard">Разрешение на просмотр финансового раздела</string>
  <string name="permission_view_clients">Разрешение на просмотр клиентов</string>
  <string name="permission_view_drivers">Разрешение на просмотр водителы</string>
  <string name="empty_jobId">Вам нужно выбрать одну из должностей</string>
  <string name="permission_description">Чтобы изменить разрешения для определенной должности, выберите одно из названий должностей и выберите или отмените выбор разрешений ниже.</string>
  <string name="change_user_permissions">Изменить разрешения пользователя</string>
  <string name="permissions_for_employees">Разрешения для сотрудников</string>
  <string name="permissions_for_sales">Разрешения для продаж</string>
  <string name="permissions_for_ingredients">Разрешения для ингредиентов</string>
  <string name="permissions_for_products">Разрешения для продуктов</string>
  <string name="permissions_for_dashboard">Разрешения для финансовых</string>
  <string name="permissions_for_clients">Разрешения для клиентов</string>
  <string name="permissions_for_driver">Разрешения для водителя</string>
  <string name="error">Что-то пошло не так</string>
  <string name="user_permissions">разрешения пользователя</string>
  <string name="logout">выйти</string>
  <string name="logout_message">Выход из приложения!</string>
  <string name="cancel_order">Отменить заказ</string>
  <string name="cancel_order_decription">Вы хотите отменить заказ?</string>

</resources>