<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/dashboard"
  app:startDestination="@id/menuFragment">

  <fragment
    android:id="@+id/menuFragment"
    android:name="com.android.bdkstock.screens.main.menu.actions.MenuFragment"
    android:label="fragment_menu"
    tools:layout="@layout/fragment_menu" >
    <action
      android:id="@+id/action_menuFragment_to_clientsFragment"
      app:destination="@id/clientsFragment"
      app:enterAnim="@anim/enter"
      app:exitAnim="@anim/exit"
      app:popEnterAnim="@anim/pop_enter"
      app:popExitAnim="@anim/pop_exit" />
    <action
      android:id="@+id/action_menuFragment_to_driversFragment"
      app:destination="@id/driversFragment"
      app:enterAnim="@anim/enter"
      app:exitAnim="@anim/exit"
      app:popEnterAnim="@anim/pop_enter"
      app:popExitAnim="@anim/pop_exit" />
    <action
      android:id="@+id/action_menuFragment_to_employeesFragment"
      app:destination="@id/employeesFragment"
      app:enterAnim="@anim/enter"
      app:exitAnim="@anim/exit"
      app:popEnterAnim="@anim/pop_enter"
      app:popExitAnim="@anim/pop_exit" />
    <action
      android:id="@+id/action_menuFragment_to_ingredientsFragment"
      app:destination="@id/ingredientsOperationsFragment"
      app:enterAnim="@anim/enter"
      app:exitAnim="@anim/exit"
      app:popEnterAnim="@anim/pop_enter"
      app:popExitAnim="@anim/pop_exit" />
    <action
      android:id="@+id/action_menuFragment_to_salesFragment"
      app:destination="@id/salesFragment"
      app:enterAnim="@anim/enter"
      app:exitAnim="@anim/exit"
      app:popEnterAnim="@anim/pop_enter"
      app:popExitAnim="@anim/pop_exit" />
    <action
      android:id="@+id/action_menuFragment_to_ingredientsOperationFragment"
      app:destination="@id/ingredientsOperationsFragment"
      app:enterAnim="@anim/enter"
      app:exitAnim="@anim/exit"
      app:popEnterAnim="@anim/pop_enter"
      app:popExitAnim="@anim/pop_exit" />
    <action
      android:id="@+id/action_menuFragment_to_productOperationsListFragment"
      app:destination="@id/productOperationsListFragment"
      app:enterAnim="@anim/enter"
      app:exitAnim="@anim/exit"
      app:popEnterAnim="@anim/pop_enter"
      app:popExitAnim="@anim/pop_exit" />
  </fragment>

  <fragment
    android:id="@+id/employeesFragment"
    android:name="com.android.bdkstock.screens.main.menu.employees.EmployeesFragment"
    android:label="@string/employees"
    tools:layout="@layout/fragment_employees" />
  <fragment
    android:id="@+id/ingredientsOperationsFragment"
    android:name="com.android.bdkstock.screens.main.menu.ingredients.IngredientsOperationsFragment"
    android:label="@string/ingredients"
    tools:layout="@layout/fragment_ingredients_operations" />
  <fragment
    android:id="@+id/salesFragment"
    android:name="com.android.bdkstock.screens.main.menu.sales.OrderListFragment"
    android:label="@string/sales"
    tools:layout="@layout/fragment_order_list" />
  <fragment
    android:id="@+id/productOperationsListFragment"
    android:name="com.android.bdkstock.screens.main.menu.products.ProductOperationsListFragment"
    android:label="@string/products"
    tools:layout="@layout/fragment_product_operations_list" />
  <fragment
    android:id="@+id/clientsFragment"
    android:name="com.android.bdkstock.screens.main.menu.clients.ClientsFragment"
    android:label="@string/clients"
    tools:layout="@layout/fragment_clients" />
  <fragment
    android:id="@+id/driversFragment"
    android:name="com.android.bdkstock.screens.main.menu.drivers.DriversFragment"
    android:label="@string/drivers"
    tools:layout="@layout/fragment_drivers" />

</navigation>