<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:orientation="vertical"
  android:layout_height="match_parent"
  tools:context=".screens.main.menu.ingredients.AddIngredientsFragment">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/input_layout_name"
    style="@style/TextInputLayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen_large"
    android:layout_marginTop="@dimen/dimen_extra"
    android:layout_marginRight="@dimen/dimen_large"
    android:fontFamily="@font/inter_regular"
    android:hint="@string/name"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_title">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/input_name"
      android:layout_width="match_parent"
      android:fontFamily="@font/inter_regular"
      android:layout_height="wrap_content"
      android:imeOptions="actionNext"
      android:lines="1" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/input_layout_unit"
    style="@style/TextInputLayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/inter_regular"
    android:layout_marginLeft="@dimen/dimen_large"
    android:layout_marginTop="@dimen/dimen_large"
    android:layout_marginRight="@dimen/dimen_large"
    android:hint="@string/unit"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/input_layout_name">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/input_unit"
      android:layout_width="match_parent"
      android:fontFamily="@font/inter_regular"
      android:layout_height="wrap_content"
      android:imeOptions="actionNext"
      android:inputType="number"
      android:lines="1" />

  </com.google.android.material.textfield.TextInputLayout>

  <FrameLayout
    android:id="@+id/container_frame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dimen_large"
    android:layout_marginRight="@dimen/dimen_large"
    android:layout_marginTop="@dimen/dimen_extra"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <Button
      android:id="@+id/button_save"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/inter_medium"
      android:text="@string/save"
      android:textAllCaps="false" />

    <ProgressBar
      android:id="@+id/progressbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone" />

  </FrameLayout>

</LinearLayout>